[tool.poetry]
authors = ["Scraiber <contact@scraiber.com>"]
description = "A request rate limiter for fastapi"
documentation = "https://github.com/scraiber/fastapi-limiter-valkey"
homepage = "https://github.com/scraiber/fastapi-limiter-valkey"
include = ["CHANGELOG.md", "LICENSE", "README.md"]
keywords = ["fastapi", "limiter"]
license = "Apache2.0"
name = "fastapi-limiter-valkey"
packages = [
    { include = "fastapi_limiter" },
]
readme = "README.md"
repository = "https://github.com/scraiber/fastapi-limiter-valkey.git"
version = "0.1.1"

[tool.poetry.dependencies]
valkey = ">=6.0.2"
fastapi = "*"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
uvicorn = "*"
bandit = "*"
black = "*"
ruff = "*"
isort = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-xdist = "*"
requests = "*"
httpx = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
